--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -1393,6 +1393,8 @@ items:
             href: devices/remote-update.md
           - name: Управление тегами устройств Teams
             href: devices/manage-device-tags.md
+          - name: Планирование развертывания телефонов и дисплеев
+            href: devices/plan-device-deployment.md
           - name: Телефоны для Teams
             href: devices/phones-for-teams.md
           - name: Дисплеи Teams
@@ -1512,6 +1514,8 @@ items:
             items:
               - name: Управление приложением "Смены"
                 href: expand-teams-across-your-org/shifts/manage-the-shifts-app-for-your-organization-in-teams.md
+              - name: Управление владельцами расписаний для управления сменами
+                href: expand-teams-across-your-org/shifts/schedule-owner-for-shift-management.md
           - name: Bookings в Teams
             items:
               - name: Виртуальные визиты с помощью Teams и Bookings
