--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -249,7 +249,7 @@ items:
                 href: /SkypeForBusiness/hybrid/cloud-consolidation-aad-connect
           - name: Интеграция с Exchange и SharePoint
             href: /SkypeForBusiness/skype-for-business-hybrid-solutions/integration-with-exchange-and-sharepoint
-  - name: 'Безопасность, конфиденциальность и соответствие требованиям'
+  - name: 'Безопасность, соответствие требованиям и конфиденциальность'
     items:
       - name: Обзор
         href: security-compliance-overview.md
@@ -300,7 +300,7 @@ items:
           - name: Аудит
             href: audit-log-events.md
           - name: Ключ клиента
-            href: /microsoft-365/compliance/customer-key-tenant-level?bc=%2fmicrosoftteams%2fbreadcrumb%2ftoc.json&toc=%2fmicrosoftteams%2ftoc.json
+            href: /microsoft-365/compliance/customer-key-overview?bc=%2fmicrosoftteams%2fbreadcrumb%2ftoc.json&toc=%2fmicrosoftteams%2ftoc.json
           - name: API экспорта для содержимого Teams
             href: export-teams-content.md
       - name: Конфиденциальность
@@ -977,7 +977,7 @@ items:
             href: manage-your-network-topology.md
       - name: Экстренные вызовы
         items:
-          - name: Обзор
+          - name: Общие сведения
             href: what-are-emergency-locations-addresses-and-call-routing.md
           - name: Настройка динамических экстренных вызовов
             href: configure-dynamic-emergency-calling.md
@@ -1143,7 +1143,7 @@ items:
                 href: manage-phone-numbers-for-your-organization/phone-number-management-for-the-u-s.md
           - name: Ограничения и запреты для бесплатных номеров
             items:
-              - name: Обзор
+              - name: Общие сведения
                 href: toll-free-dialing-limitations-and-restrictions.md
               - name: Аргентина
                 href: toll-free-dialing-limitations-and-restrictions/toll-free-dialing-restrictions-in-argentina.md
@@ -1489,6 +1489,8 @@ items:
                 href: teams-app-permission-policies.md
               - name: Управление политиками настройки приложений в Teams
                 href: teams-app-setup-policies.md
+              - name: Настройка приложений Teams с учетом лицензии
+                href: pin-teams-apps-based-on-license.md
               - name: Управление пользовательскими политиками и параметрами приложений в Teams
                 href: teams-custom-app-policies-and-settings.md
           - name: Просмотр разрешений приложений и предоставление согласия администратора
@@ -1541,6 +1543,8 @@ items:
             href: edu-remote-low-bandwidth.md
           - name: Мастер политики Teams для образования
             href: easy-policy-setup-edu.md
+          - name: Развертывание приложения "Родители" для Teams
+            href: edu-parents-app.md
           - name: Приложение "Профконсультант" в Teams для образования
             href: career-coach.md
           - name: Контроль чатов в Teams
@@ -1581,6 +1585,8 @@ items:
             href: flw-onboarding-wizard.md
           - name: Развертывание с помощью скрипта для сотрудников без компьютеров
             href: flw-scripted-deployment.md
+          - name: Настройка приложения Teams для сотрудников без компьютеров
+            href: pin-teams-apps-based-on-license.md
           - name: Управление приложением "Смены"
             href: expand-teams-across-your-org/shifts/manage-the-shifts-app-for-your-organization-in-teams.md
           - name: Управление доступом на основе смен для сотрудников без компьютеров
