--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -1435,6 +1435,8 @@ items:
             href: alerts/device-health-status.md
           - name: Устройства и периферийные аксессуары Teams
             href: teams-device-health.md
+          - name: Использование административных единиц для управления устройствами
+            href: administrative-unit.md
   - name: 'Приложения, боты и соединители'
     items:
       - name: Обзор
@@ -1489,10 +1491,10 @@ items:
                 href: teams-app-permission-policies.md
               - name: Управление политиками настройки приложений в Teams
                 href: teams-app-setup-policies.md
-              - name: Настройка приложений Teams с учетом лицензии
-                href: pin-teams-apps-based-on-license.md
               - name: Управление пользовательскими политиками и параметрами приложений в Teams
                 href: teams-custom-app-policies-and-settings.md
+          - name: Настройка приложений Teams с учетом лицензии
+            href: pin-teams-apps-based-on-license.md
           - name: Просмотр разрешений приложений и предоставление согласия администратора
             href: app-permissions-admin-center.md
           - name: Согласие для определенных ресурсов
