commit translated contents

--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -751,7 +751,7 @@ items:
                 href: ptsn-mask-phone-numbers.md
           - name: Доступность аудиоконференций в различных странах и регионах
             href: country-and-region-availability-for-audio-conferencing-and-calling-plans/country-and-region-availability-for-audio-conferencing-and-calling-plans.md
-          - name: Справочные материалы
+          - name: Справка
             items:
               - name: Поддерживаемые языки аудиоконференций
                 href: audio-conferencing-supported-languages.md
@@ -1365,14 +1365,20 @@ items:
                 href: rooms/recovery-tool.md
       - name: Управляемая служба "Комнаты Microsoft Teams"
         items:
-          - name: Управление планированием
+          - name: Обзор
             href: rooms/microsoft-teams-rooms-premium.md
-          - name: Управление доступом на основе ролей
-            href: rooms/microsoft-teams-rooms-premium-rbac.md
           - name: Получение и назначение лицензии
             href: rooms/obtaining-assigning-license.md
           - name: Регистрация в управляемой службе MTRP
             href: rooms/enrolling-mtrp-managed-service.md
+          - name: Установка
+            href: rooms/monitor-software-installation-guide.md
+          - name: Управление доступом на основе ролей
+            href: rooms/microsoft-teams-rooms-premium-rbac.md
+          - name: Мониторинг Комнат и их обслуживание
+            href: rooms/managed-meeting-rooms-portal.md
+          - name: Управляемые обновления
+            href: rooms/update-management.md
           - name: Настройка ServiceNow для Комнат Teams
             href: rooms/microsoft-teams-rooms-configure-servicenow.md
           - name: Управление несколькими клиентами для партнеров
