--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -491,6 +491,8 @@ items:
         href: create-manager-directs-teams.md
       - name: Управление командами и политиками каналов
         href: teams-policies.md
+      - name: Отключение политики отправки основных файлов в Teams
+        href: turn-off-teams-native-file-upload-policy.md
       - name: Настройка модерации канала в Teams
         href: manage-channel-moderation-in-teams.md
       - name: Управление интерактивными компонентами
@@ -751,7 +753,7 @@ items:
                 href: ptsn-mask-phone-numbers.md
           - name: Доступность аудиоконференций в различных странах и регионах
             href: country-and-region-availability-for-audio-conferencing-and-calling-plans/country-and-region-availability-for-audio-conferencing-and-calling-plans.md
-          - name: Справка
+          - name: Справочные материалы
             items:
               - name: Поддерживаемые языки аудиоконференций
                 href: audio-conferencing-supported-languages.md
@@ -977,7 +979,7 @@ items:
             href: manage-your-network-topology.md
       - name: Экстренные вызовы
         items:
-          - name: Общие сведения
+          - name: Обзор
             href: what-are-emergency-locations-addresses-and-call-routing.md
           - name: Настройка динамических экстренных вызовов
             href: configure-dynamic-emergency-calling.md
@@ -1143,7 +1145,7 @@ items:
                 href: manage-phone-numbers-for-your-organization/phone-number-management-for-the-u-s.md
           - name: Ограничения и запреты для бесплатных номеров
             items:
-              - name: Общие сведения
+              - name: Обзор
                 href: toll-free-dialing-limitations-and-restrictions.md
               - name: Аргентина
                 href: toll-free-dialing-limitations-and-restrictions/toll-free-dialing-restrictions-in-argentina.md
@@ -1528,12 +1530,17 @@ items:
               - name: Управление приложением Bookings
                 href: bookings-app-admin.md
           - name: '"Смены" для Teams'
-            href: expand-teams-across-your-org/shifts-for-teams-landing-page.md
             items:
+              - name: Начало работы с приложением "Смены"
+                href: expand-teams-across-your-org/shifts-for-teams-landing-page.md
               - name: Управление приложением "Смены"
                 href: expand-teams-across-your-org/shifts/manage-the-shifts-app-for-your-organization-in-teams.md
               - name: Управление владельцами расписаний для управления сменами
                 href: expand-teams-across-your-org/shifts/schedule-owner-for-shift-management.md
+              - name: Соединители приложения "Смены"
+                items:
+                  - name: Обзор соединителей приложения "Смены"
+                    href: expand-teams-across-your-org/shifts/shifts-connectors.md
       - name: Teams для образования
         href: expand-teams-across-your-org/teams-for-education-landing-page.md
         items:
