--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -753,7 +753,7 @@ items:
                 href: ptsn-mask-phone-numbers.md
           - name: Доступность аудиоконференций в различных странах и регионах
             href: country-and-region-availability-for-audio-conferencing-and-calling-plans/country-and-region-availability-for-audio-conferencing-and-calling-plans.md
-          - name: Справка
+          - name: Справочные материалы
             items:
               - name: Поддерживаемые языки аудиоконференций
                 href: audio-conferencing-supported-languages.md
@@ -1405,6 +1405,8 @@ items:
             href: devices/plan-device-deployment.md
           - name: Телефоны для Teams
             href: devices/phones-for-teams.md
+          - name: Настройка телефонов общего пользования
+            href: set-up-common-area-phones.md
           - name: Дисплеи Teams
             href: devices/teams-displays.md
           - name: Панели Teams
