--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -1675,8 +1675,36 @@ items:
       - name: Teams для розничной торговли
         href: expand-teams-across-your-org/teams-for-retail-landing-page.md
         items:
+          - name: Взаимодействие команд розничной торговли
+            href: expand-teams-across-your-org/retail-team-collaboration.md
+          - name: Упрощение бизнес-процессов розничной торговли
+            href: expand-teams-across-your-org/retail-business-processes.md
           - name: Использование шаблонов команд розничной торговли
             href: get-started-with-retail-teams-templates.md
+          - name: Мастер подключения сотрудников без компьютеров
+            href: flw-onboarding-wizard.md
+          - name: Развертывание с помощью скрипта для сотрудников без компьютеров
+            href: flw-scripted-deployment.md
+          - name: '"Смены" для Teams'
+            items:
+              - name: '"Смены" для Teams'
+                href: expand-teams-across-your-org/shifts-for-teams-landing-page.md
+              - name: Управление приложением "Смены"
+                href: expand-teams-across-your-org/shifts/manage-the-shifts-app-for-your-organization-in-teams.md
+              - name: Управление доступом на основе смен
+                href: expand-teams-across-your-org/shifts/manage-shift-based-access-flw.md
+          - name: Walkie Talkie
+            href: walkie-talkie.md
+          - name: RealWear
+            href: flw-realwear.md
+          - name: Управление приложением "Благодарность"
+            href: manage-praise-app.md
+          - name: Управление приложением "Задачи"
+            href: manage-tasks-app.md
+          - name: Управление приложением Lists
+            href: manage-lists-app.md
+          - name: Управление приложением "Утверждения" в Teams
+            href: approval-admin.md
   - name: Справочные материалы
     items:
       - name: Ограничения и спецификации для Teams
