commit translated contents

--- a/Teams/instructor-led-training-teams-landing-page.yml
+++ b/Teams/instructor-led-training-teams-landing-page.yml
@@ -4,7 +4,7 @@ summary: 'Размещенные на серверах Майкрософт бе
 brand: teams
 metadata:
   title: Обучение пользователей Microsoft Teams
-  description: 'Корпорация Майкрософт рады предоставить бесплатные виртуальные учебные курсы в режиме жизни, разработанные для того, чтобы вы могли работать с Teams. Если вы являетесь лицом, принимающим решения в бизнесе, администратором, ИТ-специалистом или конечным пользователем, вы найдете занятия, которые вам подойдут. Присоединяйтесь к нам, чтобы Microsoft Teams в действии, получать ответы на вопросы и взаимодействовать с нашими инструкторами в прямом эфире. Щелкните сеанс ниже, чтобы зарегистрироваться и обязательно ознакомьтесь с дополнительными курсами ниже.'
+  description: 'Корпорация Майкрософт рады предоставить бесплатные виртуальные учебные курсы в режиме Teams. Если вы являетесь лицом, принимающим решения в бизнесе, администратором, ИТ-специалистом или конечным пользователем, вы найдете занятия, которые вам подойдут. Присоединяйтесь к нам, чтобы Microsoft Teams в действии, получать ответы на вопросы и взаимодействовать с нашими инструкторами в прямом эфире. Щелкните сеанс ниже, чтобы зарегистрироваться и обязательно ознакомьтесь с дополнительными курсами ниже.'
   ms.topic: hub-page
   author: SerdarSoysal
   ms.author: serdars
@@ -46,10 +46,10 @@ productDirectory:
       imageSrc: 'https://docs.microsoft.com/office/media/icons/lightbulb-idea-capture-teams.svg'
       summary: 'Узнайте, как Teams может помочь вам организовать свой рабочий день и оставаться на связи с коллегами. (Аудитория: все)'
       url: 'https://aka.ms/TeamsProTips'
-    - title: Освойте работу из дома с помощью Teams
-      imageSrc: 'https://docs.microsoft.com/office/media/icons/headset-teams.svg'
-      summary: 'Рекомендации по поддержанию связи с командой и сохранению производительности. (Аудитория: все)'
-      url: 'https://aka.ms/WFHTeams'
+    - title: Microsoft Teams youTube
+      imageSrc: 'https://docs.microsoft.com/office/media/icons/video-play.svg'
+      summary: 'Подпишитесь и будьте первыми, чтобы узнать о новейших функций, советах и советах и не только. (Аудитория: все)'
+      url: 'https://www.youtube.com/MicrosoftTeams'
     - title: Teams для образовательных учреждений - Вебинары
       imageSrc: 'https://docs.microsoft.com/office/media/icons/education-tutorial-teams.svg'
       summary: 'Сведения об использовании Teams в высшем образовании. (Аудитория: преподаватели, учащиеся, исследовательские факультеты, ИТ-специалисты)'
